# OpenCalibGui

./: CMakeLists.txt  README.md  main.cpp
include/: calibration.h  mainwindow.h  thumbnail.h
src/: calibration.cpp  mainwindow.cpp  mainwindow.ui  thumbnail.cpp  thumbnail.ui
